# inventree-meta-plugin

./: README.md  cookiecutter.json
.github/workflows/: plugin_action.yaml  pypi.yaml
cookie-cutter/: cookiecutter.json
cookie-cutter/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  {{ cookiecutter.project_plugin_name }}.py
